Fix result view on mobile

--- a/client/src/pages/result/Result.module.css
+++ b/client/src/pages/result/Result.module.css
@@ -17,5 +17,6 @@
 }
 .dataTable{
 width: 100%;
+min-height: 100vh;
 }
   }
